# easy_handeye

./: .clang-format  .gitignore  README.md  TODO.md  pyproject.toml
docs/: troubleshooting.md
docs/example_launch/: iiwa_kinect_xtion_calibration.launch  iiwa_stack_config.rviz  panda_realsense_eyeonbase.launch  ur5_k4a_base.launch  ur5_k4a_calibrate.launch  ur5_k4a_calibration.launch  ur5_k4a_check.launch  ur5_kinect_calibration.launch  ur5e_realsense_calibration.launch
easy_handeye/: CMakeLists.txt  README.md  package.xml  setup.py
easy_handeye/launch/: calibrate.launch  check.launch  publish.launch  rqt_easy_handeye.perspective  rviz_easy_handeye.config
easy_handeye/msg/: SampleList.msg
easy_handeye/scripts/: calibrate.py  handeye_calibration_commander.py  mkdir_calibration.sh  publish.py  robot.py
easy_handeye/src/easy_handeye/: __init__.py  handeye_calibration.py  handeye_calibration_backend_opencv.py  handeye_calibration_service_visp.py  handeye_calibrator.py  handeye_client.py  handeye_robot.py  handeye_sampler.py  handeye_server.py  handeye_server_robot.py
easy_handeye/src/handeyecalibration/: handeye_calibration.py  handeye_client.py  handeye_server.py
easy_handeye/srv/: ComputeCalibration.srv
easy_handeye_msgs/: CMakeLists.txt  package.xml
easy_handeye_msgs/msg/: SampleList.msg  TargetPoseList.msg
easy_handeye_msgs/srv/calibration/: ListAlgorithms.srv  SetAlgorithm.srv
easy_handeye_msgs/srv/robot_movements/: CheckStartingPose.srv  EnumerateTargetPoses.srv  SelectTargetPose.srv
easy_handeye_rviz_plugins/: CMakeLists.txt  package.xml  plugin_description.xml
easy_handeye_rviz_plugins/src/: calibration_panel.cpp  calibration_panel.h  calibration_panel.ui  handeye_client.cpp  handeye_client.h  robot_movements_client.cpp  robot_movements_client.h  utils.cpp  utils.h
handeye_calibration/: CMakeLists.txt  README.md  install_ubuntu_deps.sh  package.xml  setup.py
handeye_calibration/examples/: kinect.launch
handeye_calibration/launch/: handeye_calibration.launch  load.launch  publish.launch  publisher.launch  save.launch
handeye_calibration/scripts/: __init__.py  calibrate.py  calibrate_commander.py  handeye_calibration_commander.py  mkdir_calibration.sh  publish.py  publisher.py  scratch.py  signaller.py
handeye_calibration/src/handeye_calibration/: __init__.py  hand_eye_connector.py  handeye_calibration.py  handeye_calibrator.py  handeye_client.py  handeye_persistence.py  handeye_server.py
handeye_calibration/srv/: ComputeCalibration.srv  TakeSample.srv
handeyecalibration/: CMakeLists.txt  README.md  package.xml
handeyecalibration/examples/: kinect.launch
handeyecalibration/launch/: calibrate.launch  load.launch  publish.launch  save.launch
handeyecalibration/msg/: HandeyeCalibration.msg
handeyecalibration/scripts/: calibrate.py  handeye_calibration_commander.py  move_locally.py  publish.py
handeyecalibration/src/handeyecalibration/: __init__.py  handeye_calibration.py  handeye_calibrator.py  handeye_client.py  handeye_server.py
handeyecalibration/srv/: RemoveSample.srv
rqt_easy_handeye/: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
rqt_easy_handeye/resource/: rqt_handeye.ui  rqt_handeye_evaluator.ui  rqt_handeye_info.ui
rqt_easy_handeye/scripts/: rqt_calibration_evaluator  rqt_calibrationmovements  rqt_easy_handeye  rqt_handeyecalibration
rqt_easy_handeye/src/rqt_easy_handeye/: rqt_calibration_evaluator.py  rqt_calibrationmovements.py  rqt_easy_handeye.py
rqt_easy_handeye/src/rqt_handeyecalibration/: rqt_calibrationmovements.py  rqt_handeyecalibration.py
rqt_handeyecalibration/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_handeyecalibration/resource/: rqt_handeye.ui
rqt_handeyecalibration/scripts/: rqt_calibrationmovements  rqt_handeyecalibration.py
rqt_handeyecalibration/src/rqt_handeyecalibration/: rqt_calibrationmovements.py  rqt_handeyecalibration.py
tests/: conftest.py  test_infrastructure_validation.py
