[tool.poetry]
name = "easy-handeye"
version = "0.1.0"
description = "Hand-eye calibration for ROS robots"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "LICENSE.md"
packages = [
    { include = "easy_handeye", from = "easy_handeye/src" },
    { include = "rqt_easy_handeye", from = "rqt_easy_handeye/src" }
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"

[tool.poetry.scripts]
test = "pytest:main"
tests = "pytest:main"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=easy_handeye",
    "--cov=rqt_easy_handeye",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=0",
    "-vv"
]
markers = [
    "unit: marks tests as unit tests (fast, isolated)",
    "integration: marks tests as integration tests (may require external resources)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]

[tool.coverage.run]
source = ["easy_handeye", "rqt_easy_handeye"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/setup.py",
    "*/.venv/*",
    "*/venv/*",
    "*/.tox/*",
    "*/.eggs/*"
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = true
fail_under = 0
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:"
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"