<?xml version="1.0"?>
<package format="2">
    <name>easy_handeye</name>
    <version>0.2.0</version>
    <description>
        Simple, straighforward ROS library for hand-eye calibration
    </description>

    <maintainer email="esposito@imfusion.com">Marco Esposito</maintainer>

    <license>LGPLv3</license>

    <author email="esposito@imfusion.com">Marco Esposito</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>

    <depend>geometry_msgs</depend>
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>
    <depend>visp_hand2eye_calibration</depend>

    <exec_depend>message_runtime</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
</package>
