<?xml version="1.0"?>
<package format="2">
    <name>easy_handeye</name>
    <version>0.2.0</version>
    <description>
        Simple, hardware-independent ROS library for hand-eye calibration
    </description>

    <maintainer email="esposito@imfusion.com">Marco Esposito</maintainer>

    <license>LGPLv3</license>

    <author email="esposito@imfusion.com">Marco Esposito</author>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>std_srvs</exec_depend>
    <exec_depend>easy_handeye_msgs</exec_depend>
    <exec_depend>visp_hand2eye_calibration</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
</package>
