<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>easy_handeye</name>
    <version>0.4.2</version>
    <description>
        Simple, hardware-independent ROS library for hand-eye calibration
    </description>

    <maintainer email="esposito@imfusion.com">Marco Esposito</maintainer>

    <license>LGPLv3</license>

    <author email="esposito@imfusion.com">Marco Esposito</author>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>std_srvs</exec_depend>
    <exec_depend>easy_handeye_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>python-transforms3d-pip</exec_depend>
    <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-opencv</exec_depend>
    <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-opencv</exec_depend>
</package>
