<?xml version="1.0"?>
<package format="2">
  <name>easy_handeye_rviz_plugins</name>
  <version>0.2.0</version>
  <description>RViz controls to perform a hand-eye calibration with easy_handeye</description>

  <maintainer email="esposito@imfusion.com">Marco Esposito</maintainer>

  <license>LGPLv3</license>

  <author email="esposito@imfusion.com">Marco Esposito</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rviz</depend>
  <depend>qtbase5-dev</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-widgets</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>easy_handeye_msgs</depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
