<?xml version="1.0"?>
<package>
    <name>handeyecalibration</name>
    <version>0.1.0</version>
    <description>
        This package uses visp_hand2eye_calibration to determine the
        extrinsic parameters of cameras.
    </description>

    <maintainer email="marco.esposito@tum.de">Marco Esposito</maintainer>

    <license>BSD</license>

    <author email="marco.esposito@tum.de">Marco Esposito</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>visp_hand2eye_calibration</build_depend>
    <run_depend>message_runtime</run_depend>

    <run_depend>visp_hand2eye_calibration</run_depend>
    <run_depend>tf</run_depend>

    <export>
        <rosindex>
            <tags>
                <tag>calibration</tag>
                <tag>extrinsic</tag>
            </tags>
        </rosindex>
    </export>
</package>
