<?xml version="1.0"?>
<package format="2">
    <name>rqt_easy_handeye</name>
    <version>0.4.2</version>
    <description>rqt GUI for the easy_handeye package</description>

    <maintainer email="esposito@imfusion.com">Marco Esposito</maintainer>

    <license>LGPLv3</license>

    <author email="esposito@imfusion.com">Marco Esposito</author>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>rospy</exec_depend>
    <exec_depend>rqt_gui</exec_depend>
    <exec_depend>rqt_gui_py</exec_depend>
    <exec_depend>moveit_commander</exec_depend>
    <exec_depend>easy_handeye</exec_depend>
    <exec_depend>easy_handeye_msgs</exec_depend>

    <export>
        <rqt_gui plugin="${prefix}/plugin.xml"/>
    </export>
</package>
